# pbg

./: .gitignore  cmdline.go  cmdline_db.go  cmdline_proj.go  go.mod  go.sum  setup.sh  test.sh
clang/: ast.go
disasm/: disasm.go
elf/: dwarf.go  dwarfop.go  elf.go
files/: files.go
graph/: datalog.go  draw.go  pbg.go  priorityqueue.go  providers.go
instr_alloc_client/: CMakeLists.txt  instr_alloc.c  myclient.c
malloc_wrap/: build.sh  mymalloc.c
queries/: all.js  dead-write.dl  mem-test.dl  single-all.js  vars.js
scripts/: instrace.py  memtrace.py
tests/basic/: basic.json  test  test.c
tests/basic/drmemtrace.test.27571.9463.dir/raw/: drmemtrace.test.27571.0769.raw
tests/basic_malloc/: basic_malloc.json  test.c
tests/structs/: structs.json  test  test.c  test.i64
tests/structs2/: test  test.c
tests/tcc/: tcc.json
tests/tcc_forth/: cache_miss.csv  tcc_forth.json
tests/tcc_real/: cache_miss.csv  tcc_real.json
trace/: cachemiss.go  instrace.go  memtrace.go  rawinstrace.go  rawinstralloctrace.go  rawmemtrace.go
